# LinxIpcProject

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  DISTRIBUTION.md  EXTENDING.md  LICENSE.txt  README.md  create_package.sh
.github/workflows/: build_package.yml  run_ut.yml
LinxIpc/: CMakeLists.txt  LinxIpcConfig.cmake.in
LinxIpc/exports/: LinxIpc.h  LinxIpcClient.h  LinxIpcEndpoint.h  LinxIpcMessage.h  LinxIpcServer.h
LinxIpc/include/: AfUnix.h  LinxClient.h  LinxIpc.h  LinxIpcClient.h  LinxIpcClientImpl.h  LinxIpcEndpoint.h  LinxIpcEndpointImpl.h  LinxIpcEndpointSimpleImpl.h  LinxIpcEndpointThreadImpl.h  LinxIpcHandler.h  LinxIpcMessage.h  LinxIpcServer.h  LinxIpcServerImpl.h  LinxIpcSocket.h  LinxIpcSocketImpl.h  LinxMessage.h  LinxQueue.h  LinxQueueFd.h  LinxQueueFdImpl.h  LinxQueueImpl.h  LinxServer.h  LinxTime.h  LinxTrace.h  UdpLinx.h  UnixLinx.h  trace.h
LinxIpc/include/common/: IIdentifier.h  LinxClient.h  LinxIpc.h  LinxMessage.h  LinxServer.h
LinxIpc/include/generic/: GenericClient.h  GenericServer.h  GenericSimpleServer.h  LinxProtocol.h
LinxIpc/include/message/: MyMessage.h  RawMessage.h
LinxIpc/include/unix/: AfUnixClient.h  AfUnixServer.h
LinxIpc/src/: LinxIpc.cpp  LinxIpcClientImpl.cpp  LinxIpcClientImpl.h  LinxIpcEndpointImpl.cpp  LinxIpcEndpointSimpleImpl.cpp  LinxIpcEndpointThreadImpl.cpp  LinxIpcEventFdImpl.h  LinxIpcMessage.cpp  LinxIpcPrivate.h  LinxIpcServerImpl.cpp  LinxIpcServerImpl.h  LinxIpcSocketImpl.cpp  LinxIpcSocketImpl.h  LinxQueue.h  LinxQueueFd.cpp  LinxQueueFd.h  LinxQueueFdImpl.cpp  LinxQueueImpl.cpp  LinxQueueImpl.h  LinxTime.cpp  trace.cpp
LinxIpc/src/client/: LinxIpcClientImpl.cpp  LinxIpcClientImpl.h  LinxIpcEndpointImpl.cpp  LinxIpcEndpointImpl.h
LinxIpc/src/common/: Deadline.h  DirectReceiveStrategy.h  DirectReceiveStrategy.tpp  GenericClient.tpp  GenericServer.tpp  GenericSimpleServer.tpp  GenericSocket.h  IReceiveStrategy.h  LinxIpcHandler.cpp  LinxMessageFilter.h  LinxTrace.h  QueueReceiveStrategy.h  QueueReceiveStrategy.tpp
LinxIpc/src/endpoint/: LinxIpcEndpointImpl.cpp  LinxIpcEndpointImpl.h
LinxIpc/src/handler/: LinxIpcHandlerImpl.cpp  LinxIpcHandlerImpl.h
LinxIpc/src/message/: LinxMessage.cpp  RawMessage.cpp
LinxIpc/src/queue/: LinxEventFd.cpp  LinxEventFd.h  LinxIpcEventFd.h  LinxIpcEventFdImpl.cpp  LinxQueue.cpp  LinxQueue.h  LinxQueueImpl.cpp  LinxQueueImpl.h
LinxIpc/src/server/: LinxIpcServerImpl.cpp  LinxIpcServerImpl.h
LinxIpc/src/socket/: LinxIpcSocket.h  LinxIpcSocketImpl.cpp  LinxIpcSocketImpl.h
LinxIpc/src/udp/: UdpFactory.cpp  UdpSocket.cpp  UdpSocket.h
LinxIpc/src/unix/: AfUnixClient.cpp  AfUnixEndpoint.cpp  AfUnixEndpoint.h  AfUnixFactory.cpp  AfUnixServer.cpp  AfUnixSocket.cpp  AfUnixSocket.h
LinxIpc/src/utils/: LinxIpcHandler.cpp  LinxIpcMessage.cpp  LinxIpcPrivate.h
LinxIpc/tests/: AfUnixClientTests.cpp  AfUnixEndpointTests.cpp  AfUnixServerTests.cpp  AfUnixSocketTests.cpp  DeadlineTests.cpp  LinxEventFdTests.cpp  LinxIpcClientTests.cpp  LinxIpcEndpointSimpleTests.cpp  LinxIpcEndpointTests.cpp  LinxIpcEndpointThreadTests.cpp  LinxIpcEventFdTests.cpp  LinxIpcHandlerTests.cpp  LinxIpcIntegrationTests.cpp  LinxIpcMessageTests.cpp  LinxIpcPerformanceTests.cpp  LinxIpcServerTests.cpp  LinxMessageTests.cpp  LinxQueueTests.cpp  LinxTimeTests.cpp  SylogEnvironment.cpp  SystemMock.h  UdpFactoryTests.cpp  UdpSocketTests.cpp  dummy_test.cpp
LinxIpc/tests/mocks/: AfUnixSocketMock.h  LinxClientMock.h  LinxEventFdMock.h  LinxIpcClientMock.h  LinxIpcEndpointMock.h  LinxIpcEventFdMock.h  LinxIpcQueueFdMock.h  LinxIpcQueueMock.h  LinxIpcServerMock.h  LinxIpcSocketMock.h  LinxQueueMock.h  LinxServerMock.h  PthreadMock.cpp  PthreadMock.h  SystemMock.cpp  SystemMock.h  UdpSocketMock.h
ServiceDiscovery/: CMakeLists.txt
ServiceDiscovery/include/: ServiceDiscovery.h
ServiceDiscovery/src/: Messages.h  Server.cpp  ServiceDiscovery.cpp  ServiceRepository.cpp  ServiceRepository.h  TestApp.cpp
TestApp/: CMakeLists.txt  TestClient1.cpp  TestClient2.cpp  TestClient3.cpp  ipcSender.cpp
UnitTests/: CMakeLists.txt
UnitTests/cmock/: mock.py
cmake/: bottom.cmake  top.cmake  ut.cmake
cmock/: CMock2.h  mock.py  mock.sh  reroute.py
coverage/: coverity_report.AfUnixFactory.cpp.a0528755eba65524188e38dd6d9a32de.html  coverity_report.AfUnixSocket.cpp.07d84f3b1945c8ef51ae0fb1e895e60a.html  coverity_report.Deadline.h.1298e6ac1f03370864f267f18281b300.html  coverity_report.GenericClient.tpp.d42d04e41d7f0ab4de59d1344b31d428.html  coverity_report.GenericServer.tpp.df58d998c4c98a42c463714f1e1da4d9.html  coverity_report.GenericSocket.h.dc0542ed7973895505ad4b9b403e5c31.html  coverity_report.LinxEventFd.cpp.2b982c7ae011ea80bbf625f7e34e63ff.html  coverity_report.LinxIpcHandler.cpp.a3c5ef388a3c83428e584711c1347a04.html  coverity_report.LinxQueue.cpp.81cf2d25d2b43175aa9a2d1d0d7bd0ce.html  coverity_report.RawMessage.cpp.3f891709761985aee76b35441470a7e8.html  coverity_report.UdpFactory.cpp.d5f256498745172ebb4719246df7ad82.html  coverity_report.UdpSocket.cpp.e5e7bf463295ba069c50beda0c55ada0.html  coverity_report.css  coverity_report.functions.html  coverity_report.html  index.html
doc/: ARCHITECTURE.md  DISTRIBUTION.md  EXTENDING.md
examples/: CMakeLists.txt
examples/client-server-example/: CMakeLists.txt  README.md  client.cpp  server.cpp
examples/cmake-package-config/: README.md
examples/package-example/: CMakeLists.txt  README.txt  simple_example.cpp
trace/: CMakeLists.txt
trace/exports/: trace.h
trace/include/: trace.h
trace/src/: trace.cpp
